--- a/main.css
+++ b/main.css
@@ -114,6 +114,12 @@ body {
     transform: translateX(-50%);
 }
 
+@media screen and (min-width: 120.1em) {
+    html {
+        font-size: 75%;
+    }
+}
+
 @media screen and (max-width: 75em) {
     html {
         font-size: 50%;
@@ -185,7 +191,7 @@ body {
     display: flex;
     width: 80%;
     column-gap: 2.6rem;
-    margin: 0 auto;
+    margin: 0 auto 4rem;
 }
 
 .gallery {
@@ -193,11 +199,11 @@ body {
     display: flex;
     row-gap: 2.6rem;
     flex-direction: column;
-    cursor: pointer;
 }
 
 .gallery__item {
     position: relative;
+    cursor: pointer;
 }
 
 .gallery__item img {
@@ -307,5 +313,52 @@ body {
 
     .gallery_item-headline_mobile {
         display: block;
+    }
+}
+
+/* Footer */
+
+.footer__nav {
+    display: flex;
+    justify-content: center;
+    font-size: 1.28rem;
+    font-family: 'Lora', serif;
+    font-weight: 400;
+    line-height: 1.3;
+    font-style: normal;
+    background-color: #fff;
+    transition: 0.2s ease-in;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-sizing: content-box;
+    transform: translateY(100%);
+}
+
+.footer__nav_visible {
+    transform: translateY(0%);
+}
+
+.footer__item:not(:last-child):not(:last-child) {
+    border-right: 1px solid #000;
+}
+
+.footer__item a {
+    text-decoration: none;
+    color: #000;
+}
+
+.footer__item a:hover {
+    color: #ffb600;
+}
+
+.footer__item {
+    padding: 0.5rem 1rem;
+}
+
+@media screen and (max-width: 48em) {
+    .footer__nav {
+        display: none;
     }
 }
