--- a/about.css
+++ b/about.css
@@ -1,6 +1,11 @@
+/* Short Bio */
+
 .about {
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto 4rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 6.6rem;
 }
 
 .about__info {
@@ -17,10 +22,10 @@
 }
 
 .about__short-bio {
-    flex: 0 1 55%;
+    flex: 1 1 50%;
     font-size: 2rem;
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 1.3;
     align-self: center;
 }
 
@@ -43,4 +48,38 @@
 
 .about__contacts p:not(:last-child) {
     margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 62.5em) {
+    .about {
+        margin: 0 auto 7rem;
+    }
+}
+
+/* Detailed Bio */
+
+.about__detailed-bio {
+    font-size: 2rem;
+    line-height: 1.3;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+}
+
+.about__artist {
+    display: flex;
+    column-gap: 3.2rem;
+}
+
+.about__artist-text p:not(:last-child) {
+    margin-bottom: 1.8rem;
+}
+
+.about__artist-text {
+    flex: 1 1 60%;
+    margin-top: 1.8rem;
+}
+
+.about__artist-image img {
+    width: 32rem;
 }
