--- a/about.css
+++ b/about.css
@@ -27,6 +27,7 @@
     font-weight: 400;
     line-height: 1.3;
     align-self: center;
+    text-align: justify;
 }
 
 .about__short-bio h2 {
@@ -56,6 +57,17 @@
     }
 }
 
+@media screen and (max-width: 48em) {
+    .about {
+        margin: 0 auto 4rem;
+    }
+
+    .about__info {
+        flex-direction: column;
+        row-gap: 3rem;
+    }
+}
+
 /* Detailed Bio */
 
 .about__detailed-bio {
@@ -82,4 +94,15 @@
 
 .about__artist-image img {
     width: 32rem;
+}
+
+@media screen and (max-width: 48em) {
+    .about__artist {
+        flex-direction: column;
+        row-gap: 1.8rem;
+    }
+
+    .about__artist-image {
+        align-self: center;
+    }
 }
