--- a/main.css
+++ b/main.css
@@ -75,12 +75,15 @@ body {
     font-style: normal;
     font-size: 3.5rem;
     line-height: 1.3;
-    display: flex;
-    justify-content: center;
 }
 
 .header__nav_mobile {
     display: none;
+}
+
+.header__items {
+    display: flex;
+    justify-content: center;
 }
 
 .header__item {
@@ -319,21 +322,24 @@ body {
 /* Footer */
 
 .footer__nav {
-    display: flex;
-    justify-content: center;
     font-size: 1.28rem;
     font-family: 'Lora', serif;
     font-weight: 400;
     line-height: 1.3;
     font-style: normal;
+}
+
+.footer__items {
+    display: flex;
+    justify-content: center;
     background-color: #fff;
     transition: 0.2s ease-in;
     padding: 1em;
     position: fixed;
     bottom: 0;
     width: 100%;
-    box-sizing: content-box;
     transform: translateY(100%);
+    z-index: 10;
 }
 
 .footer__nav_visible {
