--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ body {
     line-height: 1.3;
 }
 
-.header__nav_mobile {
+.header__nav-mobile {
     display: none;
 }
 
@@ -148,7 +148,7 @@ body {
         display: none;
     }
 
-    .header__nav_mobile {
+    .header__nav-mobile {
         font-family: 'Amatic SC', sans-serif;
         font-weight: 700;
         font-style: normal;
@@ -157,15 +157,24 @@ body {
         display: block;
     }
 
-    .header__item_mobile:not(:last-child) {
+    .header__item-mobile:not(:last-child) {
         padding-bottom: 2rem;
     }
 
-    .header__item_mobile a {
+    .header__item-mobile a {
         color: #000;
     }
 
-    .header__item_mobile a:hover {
+    .header__item-mobile_active a {
+        color: #777;
+        font-size: 2.8rem;
+    }
+
+    .header__item-mobile_hidden {
+        display: none;
+    }
+
+    .header__item-mobile a:hover {
         color: #ffb600;
     }
 }
@@ -266,7 +275,7 @@ body {
     transition: 0.2s;
     margin-top: -1.45rem;
     padding: 2rem;
-    width: 1000%;
+    width: 1001%; /* Description should slightly cover image */
     min-height: 100vh;
     z-index: 1;
     display: none;
@@ -339,7 +348,7 @@ body {
     bottom: 0;
     width: 100%;
     transform: translateY(100%);
-    z-index: 10;
+    z-index: 100;
 }
 
 .footer__nav_visible {
