--- a/main.css
+++ b/main.css
@@ -1,22 +1,23 @@
 /* Fonts */
 
 @font-face {
-    font-family: 'Amatic SC';
-    src: url('fonts/AmaticSC-Regular.ttf');
+    font-family: 'AmaticSC-Regular';
+    src: url('fonts/AmaticSC-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Arina';
-    src: url('fonts/Arina.ttf');
+    src: url('fonts/Arina.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Lora';
-    src: url('fonts/Lora-VariableFont_wght.ttf');
+    font-family: 'Lora-Regular';
+    src: url('fonts/Lora-Regular.woff2') format('woff2');
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -29,7 +30,7 @@ html {
 body {
     font-size: 1.6rem;
     background-color: #fff;
-    font-family: 'Lora', serif;
+    font-family: 'Lora-Regular', serif;
 }
 
 /* Header */
@@ -70,7 +71,7 @@ body {
 }
 
 .header__nav {
-    font-family: 'Amatic SC', sans-serif;
+    font-family: 'AmaticSC-Regular', sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 3.5rem;
@@ -149,8 +150,8 @@ body {
     }
 
     .header__nav-mobile {
-        font-family: 'Amatic SC', sans-serif;
-        font-weight: 700;
+        font-family: 'AmaticSC-Regular', sans-serif;
+        font-weight: 400;
         font-style: normal;
         font-size: 3.5rem;
         line-height: 1.3;
@@ -225,7 +226,7 @@ body {
 }
 
 .gallery_item-headline_mobile {
-    font-family: 'Amatic SC', sans-serif;
+    font-family: 'AmaticSC-Regular', sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 3rem;
@@ -259,7 +260,7 @@ body {
     content: 'i';
     position: absolute;
     font-size: 2.1rem;
-    font-family: 'Lora', serif;
+    font-family: 'Lora-Regular', serif;
     font-weight: 400;
     max-width: 100%;
     text-align: center;
@@ -294,7 +295,7 @@ body {
 }
 
 .gallery__item-headline {
-    font-family: 'Amatic SC', sans-serif;
+    font-family: 'AmaticSC-Regular', sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 3rem;
@@ -304,7 +305,7 @@ body {
 
 .gallery__item-description {
     font-size: 1.6rem;
-    font-family: 'Lora', serif;
+    font-family: 'Lora-Regular', serif;
     font-weight: 400;
     line-height: 1.3;
 }
@@ -313,6 +314,7 @@ body {
     .gallery__wrap {
         flex-direction: column;
         width: 73%;
+        row-gap: 3.5rem;
     }
 
     .gallery {
@@ -332,7 +334,7 @@ body {
 
 .footer__nav {
     font-size: 1.28rem;
-    font-family: 'Lora', serif;
+    font-family: 'Lora-Regular', serif;
     font-weight: 400;
     line-height: 1.3;
     font-style: normal;
