--- a/styles/main.css
+++ b/styles/main.css
@@ -154,12 +154,16 @@ body {
     }
 
     .header__nav-mobile {
+        display: block;
         font-family: 'AmaticSC-Regular', sans-serif;
         font-weight: 400;
         font-style: normal;
         font-size: 3.5rem;
         line-height: 1.3;
-        display: block;
+    }
+
+    .header__item-group-mobile {
+        cursor: pointer;
     }
 
     .header__item-mobile:not(:last-child) {
@@ -168,6 +172,12 @@ body {
 
     .header__item-mobile a {
         color: #000;
+        text-decoration: none;
+    }
+
+    .header__item-mobile_active {
+        color: #777;
+        font-size: 2.8rem;
     }
 
     .header__item-mobile_active a {
